feat: add responsetive style

--- a/index.html
+++ b/index.html
@@ -28,26 +28,34 @@
                 <div class="slider__wrapper" >
                     <div class="slider__button" ></div>
                     <div class="slider__images slider__images_1 active" >
-                        <div class="phone phone_vertical">
-                             <div class="phone__screen phone__screen_vertical"></div>
-                             <div class="phone__touch phone__touch_vertical"></div>
-                         </div>
-                        <div class="phone phone_horizontal">
-                             <div class="phone__screen phone__screen_horizontal"></div>
-                             <div class="phone__touch phone__touch_horizontal"></div>
+                        <div class="phones">
+                            <div class="phone phone_vertical">
+                                <div class="phone__screen phone__screen_vertical"></div>
+                                <div class="phone__touch phone__touch_vertical"></div>
+                            </div>
+                           <div class="phone phone_horizontal">
+                                <div class="phone__screen phone__screen_horizontal"></div>
+                                <div class="phone__touch phone__touch_horizontal"></div>
+                           </div>
                         </div>
                     </div>
                     <div class="slider__images slider__images_2 " >
-                        <div class="phone phone_vertical phone_vertical_green">
-                             <div class="phone__screen phone__screen_vertical phone__screen_vertical_green"></div>
-                             <div class="phone__touch phone__touch_green"></div>
-                         </div>
-                         <div class="phone phone_vertical phone_vertical_small">
-                            <div class="phone__screen phone__screen_vertical"></div>
-                        </div>
-                        <div class="phone phone_vertical phone_vertical_small phone_vertical_small_right ">
-                            <div class="phone__screen phone__screen_vertical"></div>
-                        </div>
+                        <div class="phones">
+                            
+                            <div class="phone phone_vertical phone_vertical_small">
+                                <div class="phone__screen phone__screen_vertical"></div>
+                            </div>
+
+                            <div class="phone phone_vertical phone_vertical_green">
+                                <div class="phone__screen phone__screen_vertical phone__screen_vertical_green"></div>
+                                <div class="phone__touch phone__touch_green"></div>
+                            </div>                                               
+
+                            <div class="phone phone_vertical phone_vertical_small phone_vertical_small_right ">
+                                <div class="phone__screen phone__screen_vertical"></div>
+                            </div>
+
+                        </div>                                               
                     </div>
                     <div class="slider__button slider__button_right"></div>
                 </div>
@@ -233,7 +241,7 @@
                         <input type="email" name="email" id="email" class="input input__email" placeholder="Email (Reqiured)" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
                         <input type="text" name="subject" id="subject" class="input input__sub" placeholder="Subject" maxlength="25">
                         <textarea name="textarea" id="description" placeholder="Describe your project in detail..." maxlength="1000"></textarea>
-                        <button  class="submit" >Submit</button>
+                        <button  class="submit" >Send</button>
                         <div class="quote__message hidden">
                             <div class="message">
                                 <h3 class="message__success">The letter was sent</h3>
