feat: edit portfolio image and about us image box

--- a/index.html
+++ b/index.html
@@ -147,45 +147,18 @@
                     </div>
                 </div>
                 <div class="works">
-                    <div class="works__image works__image_1">
-                        <span class="tag">Artwork</span>
-                    </div>
-                    <div class="works__image works__image_2">
-                        <span class="tag">Graphic Design</span>
-                    </div> 
-                    <div class="works__image works__image_3">
-                        <span class="tag">Artwork</span>
-                    </div> 
-                    <div class="works__image works__image_4">
-                        <span class="tag">Web Design</span>
-                    </div>                 
-                    <div class="works__image works__image_5">
-                        <span class="tag">Graphic Design</span>
-                        <span class="tag">Web Design</span>
-                    </div> 
-                    <div class="works__image works__image_6">
-                        <span class="tag">Web Design</span>
-                    </div> 
-                    <div class="works__image works__image_7">
-                        <span class="tag">Artwork</span>
-                    </div> 
-                    <div class="works__image works__image_8">
-                        <span class="tag">Web Design</span>
-                    </div>                 
-                    <div class="works__image works__image_9">
-                        <span class="tag">Graphic Design</span>
-                        <span class="tag">Web Design</span>
-                    </div> 
-                    <div class="works__image works__image_10">
-                        <span class="tag">Web Design</span>
-                    </div> 
-                    <div class="works__image works__image_11">
-                        <span class="tag">Artwork</span>
-                        <span class="tag">Web Design</span>
-                    </div> 
-                    <div class="works__image works__image_12">
-                        <span class="tag">Web Design</span>
-                    </div>                                 
+                    <img class="works__image" src="./assets/1.png" alt="image1" width="220px" height="187px">
+                    <img class="works__image" src="./assets/2.png" alt="image1" width="220px" height="187px">
+                    <img class="works__image" src="./assets/3.png" alt="image1" width="220px" height="187px">
+                    <img class="works__image" src="./assets/4.png" alt="image1" width="220px" height="187px">
+                    <img class="works__image" src="./assets/5.png" alt="image1" width="220px" height="187px">
+                    <img class="works__image" src="./assets/6.png" alt="image1" width="220px" height="187px">
+                    <img class="works__image" src="./assets/7.png" alt="image1" width="220px" height="187px">
+                    <img class="works__image" src="./assets/8.png" alt="image1" width="220px" height="187px">
+                    <img class="works__image" src="./assets/9.png" alt="image1" width="220px" height="187px">
+                    <img class="works__image" src="./assets/10.png" alt="image1" width="220px" height="187px">
+                    <img class="works__image" src="./assets/11.png" alt="image1" width="220px" height="187px">
+                    <img class="works__image" src="./assets/12.png" alt="image1" width="220px" height="187px">                       
                 </div>
             </section>
             <section class="about" id="about">
@@ -194,7 +167,7 @@
                     <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
                     <div class="about__resumes">
                         <div class="resume__layout">
-                            <div class="resume__image resume__image_1"></div>
+                            <img  class="resume__image" src="./assets/avatar1.png" alt="avatar1" width="300px" height="300px">
                             <h3>Adam Jansen</h3>
                             <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
                             <div class="resume__link">
@@ -207,7 +180,7 @@
                             </div>
                         </div>
                         <div class="resume__layout">
-                            <div class="resume__image resume__image_2"></div>
+                            <img  class="resume__image" src="./assets/avatar2.png" alt="avatar2" width="300px" height="300px">
                             <h3>Desmond Miles</h3>
                             <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
                             <div class="resume__link">
@@ -220,7 +193,7 @@
                             </div>
                         </div>
                         <div class="resume__layout">
-                            <div class="resume__image resume__image_3"></div>
+                            <img  class="resume__image" src="./assets/avatar3.png" alt="avatar3" width="300px" height="300px">
                             <h3>Scolara Visari</h3>
                             <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
                             <div class="resume__link">
